--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,10 @@ Coded by www.creative-tim.com
     />
 
     <script async defer src="https://buttons.github.io/buttons.js"></script>
+
+     <!-- Leaflet CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVTP8VgMDJ5UnXyd6owzXkmHOfQq3savAdSmPHq7AzWILDzlzlZFA93j6wWQtk" crossorigin=""/>
+
   </head>
   <body class="bg-gray-100">
     <noscript>
@@ -46,5 +50,9 @@ Coded by www.creative-tim.com
     </noscript>
     <div id="app" class="g-sidenav-show"></div>
     <!-- built files will be auto injected -->
+
+     <!-- Leaflet JS -->
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+
   </body>
 </html>
